// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIStepper /> emulate stories should render scenario "Instances/XUIStepper extra long content" correctly 1`] = `
<XUIStepper
  currentStep={0}
  id="myCustomStepperId"
  lockLayout="stacked"
  tabs={
    Array [
      Object {
        "name": "The quick brown fox jumped over the lazy dog, The quick brown fox jumped over the lazy dog",
      },
      Object {
        "description": "The quick brown fox jumped over the lazy dog, The quick brown fox jumped over the lazy dog",
        "name": "The quick brown fox jumped over the lazy dog, The quick brown fox jumped over the lazy dog",
      },
      Object {
        "description": "The quick brown fox jumped over the lazy dog, The quick brown fox jumped over the lazy dog",
        "name": "Standard",
      },
    ]
  }
>
  <div
    className="xui-stepper"
    data-automationid={undefined}
  >
    <div
      className="xui-stepper-wrapper xui-stepper-stacked"
      role="tablist"
      style={
        Object {
          "gridTemplateRows": "auto auto auto 1fr",
        }
      }
    >
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={true}
        className="xui-stepper-tab xui-stepper-tab-first"
        data-automationid={undefined}
        id="myCustomStepperId-tab-0"
        key="myCustomStepperId-tab-0"
        role="tab"
        style={
          Object {
            "order": 0,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          handleClick={[Function]}
          id="myCustomStepperId-tab-0"
          isActive={true}
          isComplete={false}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-active"
          name="The quick brown fox jumped over the lazy dog, The quick brown fox jumped over the lazy dog"
          step={1}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-active"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={undefined}
                step={1}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <span
                    className="xui-stepper-link-step"
                  >
                    1
                  </span>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  The quick brown fox jumped over the lazy dog, The quick brown fox jumped over the lazy dog
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-1"
        key="myCustomStepperId-tab-1"
        role="tab"
        style={
          Object {
            "order": 1,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          description="The quick brown fox jumped over the lazy dog, The quick brown fox jumped over the lazy dog"
          handleClick={[Function]}
          id="myCustomStepperId-tab-1"
          isActive={false}
          isComplete={false}
          isStandard={true}
          linkClasses="xui-stepper-link xui-stepper-link-standard"
          name="The quick brown fox jumped over the lazy dog, The quick brown fox jumped over the lazy dog"
          step={2}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-standard"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={undefined}
                step={2}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <span
                    className="xui-stepper-link-step"
                  >
                    2
                  </span>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  The quick brown fox jumped over the lazy dog, The quick brown fox jumped over the lazy dog
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  The quick brown fox jumped over the lazy dog, The quick brown fox jumped over the lazy dog
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab xui-stepper-tab-last"
        data-automationid={undefined}
        id="myCustomStepperId-tab-2"
        key="myCustomStepperId-tab-2"
        role="tab"
        style={
          Object {
            "order": 2,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          description="The quick brown fox jumped over the lazy dog, The quick brown fox jumped over the lazy dog"
          handleClick={[Function]}
          id="myCustomStepperId-tab-2"
          isActive={false}
          isComplete={false}
          isStandard={true}
          linkClasses="xui-stepper-link xui-stepper-link-standard"
          name="Standard"
          step={3}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-standard"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={undefined}
                step={3}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <span
                    className="xui-stepper-link-step"
                  >
                    3
                  </span>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Standard
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  The quick brown fox jumped over the lazy dog, The quick brown fox jumped over the lazy dog
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-labelledby="myCustomStepperId-tab-0"
        className="xui-stepper-section"
        data-automationid={undefined}
        id="myCustomStepperId-panel"
        role="tabpanel"
        style={
          Object {
            "order": 0,
          }
        }
      />
    </div>
  </div>
</XUIStepper>
`;

exports[`<XUIStepper /> emulate stories should render scenario "Instances/XUIStepper inline (stacked button) layout" correctly 1`] = `
<XUIStepper
  currentStep={0}
  hasStackedButtons={true}
  id="myCustomStepperId"
  lockLayout="inline"
  tabs={
    Array [
      Object {
        "name": "Standard",
      },
      Object {
        "description": "Invalid Email",
        "isError": true,
        "name": "Error",
      },
      Object {
        "isDisabled": true,
        "name": "Disabled",
      },
      Object {
        "description": "All done =)",
        "isComplete": true,
        "name": "Complete",
      },
    ]
  }
>
  <div
    className="xui-stepper"
    data-automationid={undefined}
  >
    <div
      className="xui-stepper-wrapper xui-stepper-inline xui-stepper-stacked-links"
      role="tablist"
      style={
        Object {
          "gridTemplateRows": "auto auto auto auto 1fr",
        }
      }
    >
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={true}
        className="xui-stepper-tab xui-stepper-tab-first"
        data-automationid={undefined}
        id="myCustomStepperId-tab-0"
        key="myCustomStepperId-tab-0"
        role="tab"
        style={
          Object {
            "order": 0,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          handleClick={[Function]}
          id="myCustomStepperId-tab-0"
          isActive={true}
          isComplete={false}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-active"
          name="Standard"
          step={1}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-active"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={undefined}
                step={1}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <span
                    className="xui-stepper-link-step"
                  >
                    1
                  </span>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Standard
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-1"
        key="myCustomStepperId-tab-1"
        role="tab"
        style={
          Object {
            "order": 1,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          description="Invalid Email"
          handleClick={[Function]}
          id="myCustomStepperId-tab-1"
          isActive={false}
          isComplete={false}
          isError={true}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-error"
          name="Error"
          step={2}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-error"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={true}
                step={2}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <svg
                    className="xui-stepper-icon-error"
                    viewBox="0 0 2 7"
                  >
                    <path
                      d="M0,5 L1.99801961,5 L1.99801961,6.99797571 L0,6.99797571 L0,5 Z M0,0 L1.99801961,0 L1.99801961,4 L0,4 L0,0 Z"
                    />
                  </svg>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Error
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  Invalid Email
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-2"
        key="myCustomStepperId-tab-2"
        role="tab"
        style={
          Object {
            "order": 2,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          handleClick={[Function]}
          id="myCustomStepperId-tab-2"
          isActive={false}
          isComplete={false}
          isDisabled={true}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-disabled"
          name="Disabled"
          step={3}
          tabIndex={-1}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-disabled"
            onClick={[Function]}
            tabIndex={-1}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={undefined}
                step={3}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <span
                    className="xui-stepper-link-step"
                  >
                    3
                  </span>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Disabled
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab xui-stepper-tab-last"
        data-automationid={undefined}
        id="myCustomStepperId-tab-3"
        key="myCustomStepperId-tab-3"
        role="tab"
        style={
          Object {
            "order": 3,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          description="All done =)"
          handleClick={[Function]}
          id="myCustomStepperId-tab-3"
          isActive={false}
          isComplete={true}
          isStandard={true}
          linkClasses="xui-stepper-link xui-stepper-link-standard"
          name="Complete"
          step={4}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-standard"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={true}
                isError={undefined}
                step={4}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <svg
                    className="xui-stepper-icon-complete"
                    viewBox="0 0 9 7"
                  >
                    <polygon
                      points="0 4 1 3 3 5 8 0 9 1 3 7"
                    />
                  </svg>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Complete
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  All done =)
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-labelledby="myCustomStepperId-tab-0"
        className="xui-stepper-section"
        data-automationid={undefined}
        id="myCustomStepperId-panel"
        role="tabpanel"
        style={
          Object {
            "order": 0,
          }
        }
      />
    </div>
  </div>
</XUIStepper>
`;

exports[`<XUIStepper /> emulate stories should render scenario "Instances/XUIStepper inline standard layout" correctly 1`] = `
<XUIStepper
  currentStep={0}
  id="myCustomStepperId"
  lockLayout="inline"
  tabs={
    Array [
      Object {
        "name": "Standard",
      },
      Object {
        "description": "Invalid Email",
        "isError": true,
        "name": "Error",
      },
      Object {
        "isDisabled": true,
        "name": "Disabled",
      },
      Object {
        "description": "All done =)",
        "isComplete": true,
        "name": "Complete",
      },
    ]
  }
>
  <div
    className="xui-stepper"
    data-automationid={undefined}
  >
    <div
      className="xui-stepper-wrapper xui-stepper-inline"
      role="tablist"
      style={
        Object {
          "gridTemplateRows": "auto auto auto auto 1fr",
        }
      }
    >
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={true}
        className="xui-stepper-tab xui-stepper-tab-first"
        data-automationid={undefined}
        id="myCustomStepperId-tab-0"
        key="myCustomStepperId-tab-0"
        role="tab"
        style={
          Object {
            "order": 0,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          handleClick={[Function]}
          id="myCustomStepperId-tab-0"
          isActive={true}
          isComplete={false}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-active"
          name="Standard"
          step={1}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-active"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={undefined}
                step={1}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <span
                    className="xui-stepper-link-step"
                  >
                    1
                  </span>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Standard
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-1"
        key="myCustomStepperId-tab-1"
        role="tab"
        style={
          Object {
            "order": 1,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          description="Invalid Email"
          handleClick={[Function]}
          id="myCustomStepperId-tab-1"
          isActive={false}
          isComplete={false}
          isError={true}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-error"
          name="Error"
          step={2}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-error"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={true}
                step={2}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <svg
                    className="xui-stepper-icon-error"
                    viewBox="0 0 2 7"
                  >
                    <path
                      d="M0,5 L1.99801961,5 L1.99801961,6.99797571 L0,6.99797571 L0,5 Z M0,0 L1.99801961,0 L1.99801961,4 L0,4 L0,0 Z"
                    />
                  </svg>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Error
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  Invalid Email
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-2"
        key="myCustomStepperId-tab-2"
        role="tab"
        style={
          Object {
            "order": 2,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          handleClick={[Function]}
          id="myCustomStepperId-tab-2"
          isActive={false}
          isComplete={false}
          isDisabled={true}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-disabled"
          name="Disabled"
          step={3}
          tabIndex={-1}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-disabled"
            onClick={[Function]}
            tabIndex={-1}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={undefined}
                step={3}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <span
                    className="xui-stepper-link-step"
                  >
                    3
                  </span>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Disabled
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab xui-stepper-tab-last"
        data-automationid={undefined}
        id="myCustomStepperId-tab-3"
        key="myCustomStepperId-tab-3"
        role="tab"
        style={
          Object {
            "order": 3,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          description="All done =)"
          handleClick={[Function]}
          id="myCustomStepperId-tab-3"
          isActive={false}
          isComplete={true}
          isStandard={true}
          linkClasses="xui-stepper-link xui-stepper-link-standard"
          name="Complete"
          step={4}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-standard"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={true}
                isError={undefined}
                step={4}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <svg
                    className="xui-stepper-icon-complete"
                    viewBox="0 0 9 7"
                  >
                    <polygon
                      points="0 4 1 3 3 5 8 0 9 1 3 7"
                    />
                  </svg>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Complete
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  All done =)
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-labelledby="myCustomStepperId-tab-0"
        className="xui-stepper-section"
        data-automationid={undefined}
        id="myCustomStepperId-panel"
        role="tabpanel"
        style={
          Object {
            "order": 0,
          }
        }
      />
    </div>
  </div>
</XUIStepper>
`;

exports[`<XUIStepper /> emulate stories should render scenario "Instances/XUIStepper progress button combinations" correctly 1`] = `
<XUIStepper
  currentStep={0}
  id="myCustomStepperId"
  lockLayout="stacked"
  tabs={
    Array [
      Object {
        "currentProgress": 3,
        "isProgress": true,
        "name": "Standard",
        "totalProgress": 5,
      },
      Object {
        "currentProgress": 3,
        "description": "Multiline",
        "isProgress": true,
        "name": "Standard",
        "totalProgress": 5,
      },
      Object {
        "currentProgress": 3,
        "isError": true,
        "isProgress": true,
        "name": "Error",
        "totalProgress": 5,
      },
      Object {
        "currentProgress": 3,
        "description": "With \\"isDisabled\\" prop",
        "isDisabled": true,
        "isError": true,
        "isProgress": true,
        "name": "Error",
        "totalProgress": 5,
      },
      Object {
        "currentProgress": 3,
        "isComplete": true,
        "isProgress": true,
        "name": "Complete",
        "totalProgress": 5,
      },
      Object {
        "currentProgress": 3,
        "description": "With \\"isError\\" prop",
        "isComplete": true,
        "isError": true,
        "isProgress": true,
        "name": "Complete",
        "totalProgress": 5,
      },
      Object {
        "currentProgress": 3,
        "description": "With \\"isDisabled\\" prop",
        "isComplete": true,
        "isDisabled": true,
        "isProgress": true,
        "name": "Complete",
        "totalProgress": 5,
      },
      Object {
        "currentProgress": 5,
        "description": "When progress is complete",
        "isProgress": true,
        "name": "Complete",
        "totalProgress": 5,
      },
    ]
  }
>
  <div
    className="xui-stepper"
    data-automationid={undefined}
  >
    <div
      className="xui-stepper-wrapper xui-stepper-stacked"
      role="tablist"
      style={
        Object {
          "gridTemplateRows": "auto auto auto auto auto auto auto auto 1fr",
        }
      }
    >
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={true}
        className="xui-stepper-tab xui-stepper-tab-first"
        data-automationid={undefined}
        id="myCustomStepperId-tab-0"
        key="myCustomStepperId-tab-0"
        role="tab"
        style={
          Object {
            "order": 0,
          }
        }
      >
        <StepperTab
          currentProgress={3}
          handleClick={[Function]}
          id="myCustomStepperId-tab-0"
          isActive={true}
          isComplete={false}
          isProgress={true}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-active"
          name="Standard"
          step={1}
          tabIndex={0}
          totalProgress={5}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-active"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <div
                className="xui-stepper-link-progress"
              >
                <XUIProgressCircular
                  ariaLabel="Standard"
                  id="myCustomStepperId-tab-0"
                  progress={3}
                  total={5}
                >
                  <ProgressWrapper
                    ariaLabel="Standard"
                    ariaMax={5}
                    ariaMin={0}
                    ariaNow={3}
                    classes="xui-progress xui-progress-circular"
                    customContent={undefined}
                    id="myCustomStepperId-tab-0"
                    isComplete={undefined}
                    isOverflow={undefined}
                    isSegmented={undefined}
                    isSoftError={undefined}
                    progress={3}
                    toolTipId={undefined}
                    toolTipMessage="3 of 5"
                    total={5}
                  >
                    <div
                      aria-label="Standard"
                      aria-labelledby={undefined}
                      aria-valuemax={5}
                      aria-valuemin={0}
                      aria-valuenow={3}
                      aria-valuetext="3 of 5"
                      className="xui-progress xui-progress-circular"
                      data-automationid={undefined}
                      role="progressbar"
                    >
                      <CircularGrowth
                        customContent={undefined}
                        id="myCustomStepperId-tab-0"
                        isGrow={undefined}
                        isSegmented={undefined}
                        progress={3}
                        qaHook={undefined}
                        thickness={undefined}
                        total={5}
                      >
                        <div>
                          <CircularTrack
                            customContent={undefined}
                            elementWidth={20}
                            id="myCustomStepperId-tab-0"
                            isGrow={undefined}
                            isSegmented={undefined}
                            progress={3}
                            qaHook={undefined}
                            thickness={3}
                            total={5}
                          >
                            <IE11SvgScaleHack
                              key="canvas"
                              viewBoxHeight={20}
                              viewBoxWidth={20}
                            >
                              <canvas
                                className="xui-progress-circular-scaler"
                                height={20}
                                width={20}
                              />
                            </IE11SvgScaleHack>
                            <svg
                              className="xui-progress-circular-wrapper"
                              key="svg"
                              viewBox="0 0 20 20"
                            >
                              <defs>
                                <mask
                                  height={20}
                                  id="myCustomStepperId-tab-0-progress-mask"
                                  maskUnits="userSpaceOnUse"
                                  width={20}
                                  x="0"
                                  y="0"
                                >
                                  <circle
                                    className="
							xui-progress-circular-mask
							xui-progress-roundcap
						"
                                    cx={10}
                                    cy={10}
                                    r={8.5}
                                    strokeDasharray="initial"
                                    strokeWidth={3}
                                  />
                                </mask>
                              </defs>
                              <g
                                mask="url(#myCustomStepperId-tab-0-progress-mask)"
                              >
                                <circle
                                  className="xui-progress-circular-track"
                                  cx={10}
                                  cy={10}
                                  r={8.5}
                                  strokeWidth={3}
                                />
                                <circle
                                  className="xui-progress-circular-current xui-progress-roundcap"
                                  cx={10}
                                  cy={10}
                                  r={8.5}
                                  strokeDasharray={53.40707511102649}
                                  strokeDashoffset={21.362830044410597}
                                  strokeWidth={3}
                                />
                              </g>
                            </svg>
                          </CircularTrack>
                        </div>
                      </CircularGrowth>
                      <CircularIcon
                        hardErrorAlert={undefined}
                        isComplete={undefined}
                        isHardError={undefined}
                      >
                        <div
                          className="xui-progress-icon"
                        />
                      </CircularIcon>
                    </div>
                  </ProgressWrapper>
                </XUIProgressCircular>
              </div>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Standard
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-1"
        key="myCustomStepperId-tab-1"
        role="tab"
        style={
          Object {
            "order": 1,
          }
        }
      >
        <StepperTab
          currentProgress={3}
          description="Multiline"
          handleClick={[Function]}
          id="myCustomStepperId-tab-1"
          isActive={false}
          isComplete={false}
          isProgress={true}
          isStandard={true}
          linkClasses="xui-stepper-link xui-stepper-link-standard"
          name="Standard"
          step={2}
          tabIndex={0}
          totalProgress={5}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-standard"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <div
                className="xui-stepper-link-progress"
              >
                <XUIProgressCircular
                  ariaLabel="Standard"
                  id="myCustomStepperId-tab-1"
                  progress={3}
                  total={5}
                >
                  <ProgressWrapper
                    ariaLabel="Standard"
                    ariaMax={5}
                    ariaMin={0}
                    ariaNow={3}
                    classes="xui-progress xui-progress-circular"
                    customContent={undefined}
                    id="myCustomStepperId-tab-1"
                    isComplete={undefined}
                    isOverflow={undefined}
                    isSegmented={undefined}
                    isSoftError={undefined}
                    progress={3}
                    toolTipId={undefined}
                    toolTipMessage="3 of 5"
                    total={5}
                  >
                    <div
                      aria-label="Standard"
                      aria-labelledby={undefined}
                      aria-valuemax={5}
                      aria-valuemin={0}
                      aria-valuenow={3}
                      aria-valuetext="3 of 5"
                      className="xui-progress xui-progress-circular"
                      data-automationid={undefined}
                      role="progressbar"
                    >
                      <CircularGrowth
                        customContent={undefined}
                        id="myCustomStepperId-tab-1"
                        isGrow={undefined}
                        isSegmented={undefined}
                        progress={3}
                        qaHook={undefined}
                        thickness={undefined}
                        total={5}
                      >
                        <div>
                          <CircularTrack
                            customContent={undefined}
                            elementWidth={20}
                            id="myCustomStepperId-tab-1"
                            isGrow={undefined}
                            isSegmented={undefined}
                            progress={3}
                            qaHook={undefined}
                            thickness={3}
                            total={5}
                          >
                            <IE11SvgScaleHack
                              key="canvas"
                              viewBoxHeight={20}
                              viewBoxWidth={20}
                            >
                              <canvas
                                className="xui-progress-circular-scaler"
                                height={20}
                                width={20}
                              />
                            </IE11SvgScaleHack>
                            <svg
                              className="xui-progress-circular-wrapper"
                              key="svg"
                              viewBox="0 0 20 20"
                            >
                              <defs>
                                <mask
                                  height={20}
                                  id="myCustomStepperId-tab-1-progress-mask"
                                  maskUnits="userSpaceOnUse"
                                  width={20}
                                  x="0"
                                  y="0"
                                >
                                  <circle
                                    className="
							xui-progress-circular-mask
							xui-progress-roundcap
						"
                                    cx={10}
                                    cy={10}
                                    r={8.5}
                                    strokeDasharray="initial"
                                    strokeWidth={3}
                                  />
                                </mask>
                              </defs>
                              <g
                                mask="url(#myCustomStepperId-tab-1-progress-mask)"
                              >
                                <circle
                                  className="xui-progress-circular-track"
                                  cx={10}
                                  cy={10}
                                  r={8.5}
                                  strokeWidth={3}
                                />
                                <circle
                                  className="xui-progress-circular-current xui-progress-roundcap"
                                  cx={10}
                                  cy={10}
                                  r={8.5}
                                  strokeDasharray={53.40707511102649}
                                  strokeDashoffset={21.362830044410597}
                                  strokeWidth={3}
                                />
                              </g>
                            </svg>
                          </CircularTrack>
                        </div>
                      </CircularGrowth>
                      <CircularIcon
                        hardErrorAlert={undefined}
                        isComplete={undefined}
                        isHardError={undefined}
                      >
                        <div
                          className="xui-progress-icon"
                        />
                      </CircularIcon>
                    </div>
                  </ProgressWrapper>
                </XUIProgressCircular>
              </div>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Standard
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  Multiline
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-2"
        key="myCustomStepperId-tab-2"
        role="tab"
        style={
          Object {
            "order": 2,
          }
        }
      >
        <StepperTab
          currentProgress={3}
          handleClick={[Function]}
          id="myCustomStepperId-tab-2"
          isActive={false}
          isComplete={false}
          isError={true}
          isProgress={true}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-error"
          name="Error"
          step={3}
          tabIndex={0}
          totalProgress={5}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-error"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <div
                className="xui-stepper-link-progress"
              >
                <XUIProgressCircular
                  ariaLabel="Error"
                  id="myCustomStepperId-tab-2"
                  progress={3}
                  total={5}
                >
                  <ProgressWrapper
                    ariaLabel="Error"
                    ariaMax={5}
                    ariaMin={0}
                    ariaNow={3}
                    classes="xui-progress xui-progress-circular"
                    customContent={undefined}
                    id="myCustomStepperId-tab-2"
                    isComplete={undefined}
                    isOverflow={undefined}
                    isSegmented={undefined}
                    isSoftError={undefined}
                    progress={3}
                    toolTipId={undefined}
                    toolTipMessage="3 of 5"
                    total={5}
                  >
                    <div
                      aria-label="Error"
                      aria-labelledby={undefined}
                      aria-valuemax={5}
                      aria-valuemin={0}
                      aria-valuenow={3}
                      aria-valuetext="3 of 5"
                      className="xui-progress xui-progress-circular"
                      data-automationid={undefined}
                      role="progressbar"
                    >
                      <CircularGrowth
                        customContent={undefined}
                        id="myCustomStepperId-tab-2"
                        isGrow={undefined}
                        isSegmented={undefined}
                        progress={3}
                        qaHook={undefined}
                        thickness={undefined}
                        total={5}
                      >
                        <div>
                          <CircularTrack
                            customContent={undefined}
                            elementWidth={20}
                            id="myCustomStepperId-tab-2"
                            isGrow={undefined}
                            isSegmented={undefined}
                            progress={3}
                            qaHook={undefined}
                            thickness={3}
                            total={5}
                          >
                            <IE11SvgScaleHack
                              key="canvas"
                              viewBoxHeight={20}
                              viewBoxWidth={20}
                            >
                              <canvas
                                className="xui-progress-circular-scaler"
                                height={20}
                                width={20}
                              />
                            </IE11SvgScaleHack>
                            <svg
                              className="xui-progress-circular-wrapper"
                              key="svg"
                              viewBox="0 0 20 20"
                            >
                              <defs>
                                <mask
                                  height={20}
                                  id="myCustomStepperId-tab-2-progress-mask"
                                  maskUnits="userSpaceOnUse"
                                  width={20}
                                  x="0"
                                  y="0"
                                >
                                  <circle
                                    className="
							xui-progress-circular-mask
							xui-progress-roundcap
						"
                                    cx={10}
                                    cy={10}
                                    r={8.5}
                                    strokeDasharray="initial"
                                    strokeWidth={3}
                                  />
                                </mask>
                              </defs>
                              <g
                                mask="url(#myCustomStepperId-tab-2-progress-mask)"
                              >
                                <circle
                                  className="xui-progress-circular-track"
                                  cx={10}
                                  cy={10}
                                  r={8.5}
                                  strokeWidth={3}
                                />
                                <circle
                                  className="xui-progress-circular-current xui-progress-roundcap"
                                  cx={10}
                                  cy={10}
                                  r={8.5}
                                  strokeDasharray={53.40707511102649}
                                  strokeDashoffset={21.362830044410597}
                                  strokeWidth={3}
                                />
                              </g>
                            </svg>
                          </CircularTrack>
                        </div>
                      </CircularGrowth>
                      <CircularIcon
                        hardErrorAlert={undefined}
                        isComplete={undefined}
                        isHardError={undefined}
                      >
                        <div
                          className="xui-progress-icon"
                        />
                      </CircularIcon>
                    </div>
                  </ProgressWrapper>
                </XUIProgressCircular>
              </div>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Error
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-3"
        key="myCustomStepperId-tab-3"
        role="tab"
        style={
          Object {
            "order": 3,
          }
        }
      >
        <StepperTab
          currentProgress={3}
          description="With \\"isDisabled\\" prop"
          handleClick={[Function]}
          id="myCustomStepperId-tab-3"
          isActive={false}
          isComplete={false}
          isDisabled={true}
          isError={true}
          isProgress={true}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-error xui-stepper-link-disabled"
          name="Error"
          step={4}
          tabIndex={-1}
          totalProgress={5}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-error xui-stepper-link-disabled"
            onClick={[Function]}
            tabIndex={-1}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <div
                className="xui-stepper-link-progress"
              >
                <XUIProgressCircular
                  ariaLabel="Error"
                  id="myCustomStepperId-tab-3"
                  progress={3}
                  total={5}
                >
                  <ProgressWrapper
                    ariaLabel="Error"
                    ariaMax={5}
                    ariaMin={0}
                    ariaNow={3}
                    classes="xui-progress xui-progress-circular"
                    customContent={undefined}
                    id="myCustomStepperId-tab-3"
                    isComplete={undefined}
                    isOverflow={undefined}
                    isSegmented={undefined}
                    isSoftError={undefined}
                    progress={3}
                    toolTipId={undefined}
                    toolTipMessage="3 of 5"
                    total={5}
                  >
                    <div
                      aria-label="Error"
                      aria-labelledby={undefined}
                      aria-valuemax={5}
                      aria-valuemin={0}
                      aria-valuenow={3}
                      aria-valuetext="3 of 5"
                      className="xui-progress xui-progress-circular"
                      data-automationid={undefined}
                      role="progressbar"
                    >
                      <CircularGrowth
                        customContent={undefined}
                        id="myCustomStepperId-tab-3"
                        isGrow={undefined}
                        isSegmented={undefined}
                        progress={3}
                        qaHook={undefined}
                        thickness={undefined}
                        total={5}
                      >
                        <div>
                          <CircularTrack
                            customContent={undefined}
                            elementWidth={20}
                            id="myCustomStepperId-tab-3"
                            isGrow={undefined}
                            isSegmented={undefined}
                            progress={3}
                            qaHook={undefined}
                            thickness={3}
                            total={5}
                          >
                            <IE11SvgScaleHack
                              key="canvas"
                              viewBoxHeight={20}
                              viewBoxWidth={20}
                            >
                              <canvas
                                className="xui-progress-circular-scaler"
                                height={20}
                                width={20}
                              />
                            </IE11SvgScaleHack>
                            <svg
                              className="xui-progress-circular-wrapper"
                              key="svg"
                              viewBox="0 0 20 20"
                            >
                              <defs>
                                <mask
                                  height={20}
                                  id="myCustomStepperId-tab-3-progress-mask"
                                  maskUnits="userSpaceOnUse"
                                  width={20}
                                  x="0"
                                  y="0"
                                >
                                  <circle
                                    className="
							xui-progress-circular-mask
							xui-progress-roundcap
						"
                                    cx={10}
                                    cy={10}
                                    r={8.5}
                                    strokeDasharray="initial"
                                    strokeWidth={3}
                                  />
                                </mask>
                              </defs>
                              <g
                                mask="url(#myCustomStepperId-tab-3-progress-mask)"
                              >
                                <circle
                                  className="xui-progress-circular-track"
                                  cx={10}
                                  cy={10}
                                  r={8.5}
                                  strokeWidth={3}
                                />
                                <circle
                                  className="xui-progress-circular-current xui-progress-roundcap"
                                  cx={10}
                                  cy={10}
                                  r={8.5}
                                  strokeDasharray={53.40707511102649}
                                  strokeDashoffset={21.362830044410597}
                                  strokeWidth={3}
                                />
                              </g>
                            </svg>
                          </CircularTrack>
                        </div>
                      </CircularGrowth>
                      <CircularIcon
                        hardErrorAlert={undefined}
                        isComplete={undefined}
                        isHardError={undefined}
                      >
                        <div
                          className="xui-progress-icon"
                        />
                      </CircularIcon>
                    </div>
                  </ProgressWrapper>
                </XUIProgressCircular>
              </div>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Error
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  With "isDisabled" prop
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-4"
        key="myCustomStepperId-tab-4"
        role="tab"
        style={
          Object {
            "order": 4,
          }
        }
      >
        <StepperTab
          currentProgress={3}
          handleClick={[Function]}
          id="myCustomStepperId-tab-4"
          isActive={false}
          isComplete={true}
          isProgress={true}
          isStandard={true}
          linkClasses="xui-stepper-link xui-stepper-link-standard"
          name="Complete"
          step={5}
          tabIndex={0}
          totalProgress={5}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-standard"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={true}
                isError={undefined}
                step={5}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <svg
                    className="xui-stepper-icon-complete"
                    viewBox="0 0 9 7"
                  >
                    <polygon
                      points="0 4 1 3 3 5 8 0 9 1 3 7"
                    />
                  </svg>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Complete
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-5"
        key="myCustomStepperId-tab-5"
        role="tab"
        style={
          Object {
            "order": 5,
          }
        }
      >
        <StepperTab
          currentProgress={3}
          description="With \\"isError\\" prop"
          handleClick={[Function]}
          id="myCustomStepperId-tab-5"
          isActive={false}
          isComplete={true}
          isError={true}
          isProgress={true}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-error"
          name="Complete"
          step={6}
          tabIndex={0}
          totalProgress={5}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-error"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={true}
                isError={true}
                step={6}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <svg
                    className="xui-stepper-icon-error"
                    viewBox="0 0 2 7"
                  >
                    <path
                      d="M0,5 L1.99801961,5 L1.99801961,6.99797571 L0,6.99797571 L0,5 Z M0,0 L1.99801961,0 L1.99801961,4 L0,4 L0,0 Z"
                    />
                  </svg>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Complete
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  With "isError" prop
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-6"
        key="myCustomStepperId-tab-6"
        role="tab"
        style={
          Object {
            "order": 6,
          }
        }
      >
        <StepperTab
          currentProgress={3}
          description="With \\"isDisabled\\" prop"
          handleClick={[Function]}
          id="myCustomStepperId-tab-6"
          isActive={false}
          isComplete={true}
          isDisabled={true}
          isProgress={true}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-disabled"
          name="Complete"
          step={7}
          tabIndex={-1}
          totalProgress={5}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-disabled"
            onClick={[Function]}
            tabIndex={-1}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={true}
                isError={undefined}
                step={7}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <svg
                    className="xui-stepper-icon-complete"
                    viewBox="0 0 9 7"
                  >
                    <polygon
                      points="0 4 1 3 3 5 8 0 9 1 3 7"
                    />
                  </svg>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Complete
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  With "isDisabled" prop
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab xui-stepper-tab-last"
        data-automationid={undefined}
        id="myCustomStepperId-tab-7"
        key="myCustomStepperId-tab-7"
        role="tab"
        style={
          Object {
            "order": 7,
          }
        }
      >
        <StepperTab
          currentProgress={5}
          description="When progress is complete"
          handleClick={[Function]}
          id="myCustomStepperId-tab-7"
          isActive={false}
          isComplete={true}
          isProgress={true}
          isStandard={true}
          linkClasses="xui-stepper-link xui-stepper-link-standard"
          name="Complete"
          step={8}
          tabIndex={0}
          totalProgress={5}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-standard"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={true}
                isError={undefined}
                step={8}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <svg
                    className="xui-stepper-icon-complete"
                    viewBox="0 0 9 7"
                  >
                    <polygon
                      points="0 4 1 3 3 5 8 0 9 1 3 7"
                    />
                  </svg>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Complete
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  When progress is complete
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-labelledby="myCustomStepperId-tab-0"
        className="xui-stepper-section"
        data-automationid={undefined}
        id="myCustomStepperId-panel"
        role="tabpanel"
        style={
          Object {
            "order": 0,
          }
        }
      />
    </div>
  </div>
</XUIStepper>
`;

exports[`<XUIStepper /> emulate stories should render scenario "Instances/XUIStepper sidebar layout" correctly 1`] = `
<XUIStepper
  currentStep={0}
  id="myCustomStepperId"
  lockLayout="sidebar"
  tabs={
    Array [
      Object {
        "name": "Standard",
      },
      Object {
        "description": "Invalid Email",
        "isError": true,
        "name": "Error",
      },
      Object {
        "isDisabled": true,
        "name": "Disabled",
      },
      Object {
        "description": "All done =)",
        "isComplete": true,
        "name": "Complete",
      },
    ]
  }
>
  <div
    className="xui-stepper"
    data-automationid={undefined}
  >
    <div
      className="xui-stepper-wrapper xui-stepper-sidebar"
      role="tablist"
      style={
        Object {
          "gridTemplateRows": "auto auto auto auto 1fr",
        }
      }
    >
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={true}
        className="xui-stepper-tab xui-stepper-tab-first"
        data-automationid={undefined}
        id="myCustomStepperId-tab-0"
        key="myCustomStepperId-tab-0"
        role="tab"
        style={
          Object {
            "order": 0,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          handleClick={[Function]}
          id="myCustomStepperId-tab-0"
          isActive={true}
          isComplete={false}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-active"
          name="Standard"
          step={1}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-active"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={undefined}
                step={1}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <span
                    className="xui-stepper-link-step"
                  >
                    1
                  </span>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Standard
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-1"
        key="myCustomStepperId-tab-1"
        role="tab"
        style={
          Object {
            "order": 1,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          description="Invalid Email"
          handleClick={[Function]}
          id="myCustomStepperId-tab-1"
          isActive={false}
          isComplete={false}
          isError={true}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-error"
          name="Error"
          step={2}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-error"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={true}
                step={2}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <svg
                    className="xui-stepper-icon-error"
                    viewBox="0 0 2 7"
                  >
                    <path
                      d="M0,5 L1.99801961,5 L1.99801961,6.99797571 L0,6.99797571 L0,5 Z M0,0 L1.99801961,0 L1.99801961,4 L0,4 L0,0 Z"
                    />
                  </svg>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Error
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  Invalid Email
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-2"
        key="myCustomStepperId-tab-2"
        role="tab"
        style={
          Object {
            "order": 2,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          handleClick={[Function]}
          id="myCustomStepperId-tab-2"
          isActive={false}
          isComplete={false}
          isDisabled={true}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-disabled"
          name="Disabled"
          step={3}
          tabIndex={-1}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-disabled"
            onClick={[Function]}
            tabIndex={-1}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={undefined}
                step={3}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <span
                    className="xui-stepper-link-step"
                  >
                    3
                  </span>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Disabled
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab xui-stepper-tab-last"
        data-automationid={undefined}
        id="myCustomStepperId-tab-3"
        key="myCustomStepperId-tab-3"
        role="tab"
        style={
          Object {
            "order": 3,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          description="All done =)"
          handleClick={[Function]}
          id="myCustomStepperId-tab-3"
          isActive={false}
          isComplete={true}
          isStandard={true}
          linkClasses="xui-stepper-link xui-stepper-link-standard"
          name="Complete"
          step={4}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-standard"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={true}
                isError={undefined}
                step={4}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <svg
                    className="xui-stepper-icon-complete"
                    viewBox="0 0 9 7"
                  >
                    <polygon
                      points="0 4 1 3 3 5 8 0 9 1 3 7"
                    />
                  </svg>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Complete
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  All done =)
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-labelledby="myCustomStepperId-tab-0"
        className="xui-stepper-section"
        data-automationid={undefined}
        id="myCustomStepperId-panel"
        role="tabpanel"
        style={
          Object {
            "order": 0,
          }
        }
      />
    </div>
  </div>
</XUIStepper>
`;

exports[`<XUIStepper /> emulate stories should render scenario "Instances/XUIStepper stacked layout" correctly 1`] = `
<XUIStepper
  currentStep={0}
  id="myCustomStepperId"
  lockLayout="stacked"
  tabs={
    Array [
      Object {
        "name": "Standard",
      },
      Object {
        "description": "Invalid Email",
        "isError": true,
        "name": "Error",
      },
      Object {
        "isDisabled": true,
        "name": "Disabled",
      },
      Object {
        "description": "All done =)",
        "isComplete": true,
        "name": "Complete",
      },
    ]
  }
>
  <div
    className="xui-stepper"
    data-automationid={undefined}
  >
    <div
      className="xui-stepper-wrapper xui-stepper-stacked"
      role="tablist"
      style={
        Object {
          "gridTemplateRows": "auto auto auto auto 1fr",
        }
      }
    >
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={true}
        className="xui-stepper-tab xui-stepper-tab-first"
        data-automationid={undefined}
        id="myCustomStepperId-tab-0"
        key="myCustomStepperId-tab-0"
        role="tab"
        style={
          Object {
            "order": 0,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          handleClick={[Function]}
          id="myCustomStepperId-tab-0"
          isActive={true}
          isComplete={false}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-active"
          name="Standard"
          step={1}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-active"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={undefined}
                step={1}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <span
                    className="xui-stepper-link-step"
                  >
                    1
                  </span>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Standard
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-1"
        key="myCustomStepperId-tab-1"
        role="tab"
        style={
          Object {
            "order": 1,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          description="Invalid Email"
          handleClick={[Function]}
          id="myCustomStepperId-tab-1"
          isActive={false}
          isComplete={false}
          isError={true}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-error"
          name="Error"
          step={2}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-error"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={true}
                step={2}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <svg
                    className="xui-stepper-icon-error"
                    viewBox="0 0 2 7"
                  >
                    <path
                      d="M0,5 L1.99801961,5 L1.99801961,6.99797571 L0,6.99797571 L0,5 Z M0,0 L1.99801961,0 L1.99801961,4 L0,4 L0,0 Z"
                    />
                  </svg>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Error
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  Invalid Email
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-2"
        key="myCustomStepperId-tab-2"
        role="tab"
        style={
          Object {
            "order": 2,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          handleClick={[Function]}
          id="myCustomStepperId-tab-2"
          isActive={false}
          isComplete={false}
          isDisabled={true}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-disabled"
          name="Disabled"
          step={3}
          tabIndex={-1}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-disabled"
            onClick={[Function]}
            tabIndex={-1}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={undefined}
                step={3}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <span
                    className="xui-stepper-link-step"
                  >
                    3
                  </span>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Disabled
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab xui-stepper-tab-last"
        data-automationid={undefined}
        id="myCustomStepperId-tab-3"
        key="myCustomStepperId-tab-3"
        role="tab"
        style={
          Object {
            "order": 3,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          description="All done =)"
          handleClick={[Function]}
          id="myCustomStepperId-tab-3"
          isActive={false}
          isComplete={true}
          isStandard={true}
          linkClasses="xui-stepper-link xui-stepper-link-standard"
          name="Complete"
          step={4}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-standard"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={true}
                isError={undefined}
                step={4}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <svg
                    className="xui-stepper-icon-complete"
                    viewBox="0 0 9 7"
                  >
                    <polygon
                      points="0 4 1 3 3 5 8 0 9 1 3 7"
                    />
                  </svg>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Complete
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  All done =)
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-labelledby="myCustomStepperId-tab-0"
        className="xui-stepper-section"
        data-automationid={undefined}
        id="myCustomStepperId-panel"
        role="tabpanel"
        style={
          Object {
            "order": 0,
          }
        }
      />
    </div>
  </div>
</XUIStepper>
`;

exports[`<XUIStepper /> emulate stories should render scenario "Instances/XUIStepper standard button combinations" correctly 1`] = `
<XUIStepper
  currentStep={0}
  id="myCustomStepperId"
  lockLayout="stacked"
  tabs={
    Array [
      Object {
        "name": "Standard",
      },
      Object {
        "description": "Multiline",
        "name": "Standard",
      },
      Object {
        "isError": true,
        "name": "Error",
      },
      Object {
        "description": "With \\"isDisabled\\" prop",
        "isDisabled": true,
        "isError": true,
        "name": "Error",
      },
      Object {
        "isComplete": true,
        "name": "Complete",
      },
      Object {
        "description": "With \\"isError\\" prop",
        "isComplete": true,
        "isError": true,
        "name": "Complete",
      },
      Object {
        "description": "With \\"isDisabled\\" prop",
        "isComplete": true,
        "isDisabled": true,
        "name": "Complete",
      },
    ]
  }
>
  <div
    className="xui-stepper"
    data-automationid={undefined}
  >
    <div
      className="xui-stepper-wrapper xui-stepper-stacked"
      role="tablist"
      style={
        Object {
          "gridTemplateRows": "auto auto auto auto auto auto auto 1fr",
        }
      }
    >
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={true}
        className="xui-stepper-tab xui-stepper-tab-first"
        data-automationid={undefined}
        id="myCustomStepperId-tab-0"
        key="myCustomStepperId-tab-0"
        role="tab"
        style={
          Object {
            "order": 0,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          handleClick={[Function]}
          id="myCustomStepperId-tab-0"
          isActive={true}
          isComplete={false}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-active"
          name="Standard"
          step={1}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-active"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={undefined}
                step={1}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <span
                    className="xui-stepper-link-step"
                  >
                    1
                  </span>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Standard
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-1"
        key="myCustomStepperId-tab-1"
        role="tab"
        style={
          Object {
            "order": 1,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          description="Multiline"
          handleClick={[Function]}
          id="myCustomStepperId-tab-1"
          isActive={false}
          isComplete={false}
          isStandard={true}
          linkClasses="xui-stepper-link xui-stepper-link-standard"
          name="Standard"
          step={2}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-standard"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={undefined}
                step={2}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <span
                    className="xui-stepper-link-step"
                  >
                    2
                  </span>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Standard
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  Multiline
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-2"
        key="myCustomStepperId-tab-2"
        role="tab"
        style={
          Object {
            "order": 2,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          handleClick={[Function]}
          id="myCustomStepperId-tab-2"
          isActive={false}
          isComplete={false}
          isError={true}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-error"
          name="Error"
          step={3}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-error"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={true}
                step={3}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <svg
                    className="xui-stepper-icon-error"
                    viewBox="0 0 2 7"
                  >
                    <path
                      d="M0,5 L1.99801961,5 L1.99801961,6.99797571 L0,6.99797571 L0,5 Z M0,0 L1.99801961,0 L1.99801961,4 L0,4 L0,0 Z"
                    />
                  </svg>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Error
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-3"
        key="myCustomStepperId-tab-3"
        role="tab"
        style={
          Object {
            "order": 3,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          description="With \\"isDisabled\\" prop"
          handleClick={[Function]}
          id="myCustomStepperId-tab-3"
          isActive={false}
          isComplete={false}
          isDisabled={true}
          isError={true}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-error xui-stepper-link-disabled"
          name="Error"
          step={4}
          tabIndex={-1}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-error xui-stepper-link-disabled"
            onClick={[Function]}
            tabIndex={-1}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={false}
                isError={true}
                step={4}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <svg
                    className="xui-stepper-icon-error"
                    viewBox="0 0 2 7"
                  >
                    <path
                      d="M0,5 L1.99801961,5 L1.99801961,6.99797571 L0,6.99797571 L0,5 Z M0,0 L1.99801961,0 L1.99801961,4 L0,4 L0,0 Z"
                    />
                  </svg>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Error
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  With "isDisabled" prop
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-4"
        key="myCustomStepperId-tab-4"
        role="tab"
        style={
          Object {
            "order": 4,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          handleClick={[Function]}
          id="myCustomStepperId-tab-4"
          isActive={false}
          isComplete={true}
          isStandard={true}
          linkClasses="xui-stepper-link xui-stepper-link-standard"
          name="Complete"
          step={5}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-standard"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={true}
                isError={undefined}
                step={5}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <svg
                    className="xui-stepper-icon-complete"
                    viewBox="0 0 9 7"
                  >
                    <polygon
                      points="0 4 1 3 3 5 8 0 9 1 3 7"
                    />
                  </svg>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Complete
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab"
        data-automationid={undefined}
        id="myCustomStepperId-tab-5"
        key="myCustomStepperId-tab-5"
        role="tab"
        style={
          Object {
            "order": 5,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          description="With \\"isError\\" prop"
          handleClick={[Function]}
          id="myCustomStepperId-tab-5"
          isActive={false}
          isComplete={true}
          isError={true}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-error"
          name="Complete"
          step={6}
          tabIndex={0}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-error"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={true}
                isError={true}
                step={6}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <svg
                    className="xui-stepper-icon-error"
                    viewBox="0 0 2 7"
                  >
                    <path
                      d="M0,5 L1.99801961,5 L1.99801961,6.99797571 L0,6.99797571 L0,5 Z M0,0 L1.99801961,0 L1.99801961,4 L0,4 L0,0 Z"
                    />
                  </svg>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Complete
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  With "isError" prop
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-controls="myCustomStepperId-panel"
        aria-selected={false}
        className="xui-stepper-tab xui-stepper-tab-last"
        data-automationid={undefined}
        id="myCustomStepperId-tab-6"
        key="myCustomStepperId-tab-6"
        role="tab"
        style={
          Object {
            "order": 6,
          }
        }
      >
        <StepperTab
          currentProgress={NaN}
          description="With \\"isDisabled\\" prop"
          handleClick={[Function]}
          id="myCustomStepperId-tab-6"
          isActive={false}
          isComplete={true}
          isDisabled={true}
          isStandard={false}
          linkClasses="xui-stepper-link xui-stepper-link-disabled"
          name="Complete"
          step={7}
          tabIndex={-1}
          updateCurrentStep={undefined}
        >
          <button
            className="xui-stepper-link xui-stepper-link-disabled"
            onClick={[Function]}
            tabIndex={-1}
            type="button"
          >
            <div
              className="xui-stepper-link-wrapper"
            >
              <StepperIcon
                isComplete={true}
                isError={undefined}
                step={7}
              >
                <div
                  className="xui-stepper-link-icon"
                >
                  <svg
                    className="xui-stepper-icon-complete"
                    viewBox="0 0 9 7"
                  >
                    <polygon
                      points="0 4 1 3 3 5 8 0 9 1 3 7"
                    />
                  </svg>
                </div>
              </StepperIcon>
              <div
                className="xui-stepper-link-text"
              >
                <span
                  className="xui-stepper-link-heading xui-heading-small"
                >
                  Complete
                </span>
                <span
                  className="xui-stepper-link-description"
                >
                  With "isDisabled" prop
                </span>
              </div>
            </div>
          </button>
        </StepperTab>
      </div>
      <div
        aria-labelledby="myCustomStepperId-tab-0"
        className="xui-stepper-section"
        data-automationid={undefined}
        id="myCustomStepperId-panel"
        role="tabpanel"
        style={
          Object {
            "order": 0,
          }
        }
      />
    </div>
  </div>
</XUIStepper>
`;
